# actuarial-loss-prediction

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_feature_engineering.yml  parameters_model_training.yml
docs/: index.html
docs/api/nodes/: 025319ba  3812e4ce  4f22d481  63f947fc  8fce6a23  9ec9e028  f8b6be56  fc7f8d3c
notebooks/: Build pipeline.ipynb  Claim desc analysis.ipynb  exploration.ipynb  test_pipeline.ipynb
site/api/: deploy-viz-metadata  main  run-status
site/api/nodes/: 2ad6ca60  2eb16f79  8b4476e5  9de3704a  c3776ee9  e1494fbd
site/api/pipelines/: feature_engineering  model_prediction  model_training
src/actuarial_loss_prediction/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/actuarial_loss_prediction/pipelines/: __init__.py
src/actuarial_loss_prediction/pipelines/feature_engineering/: __init__.py  nodes.py  pipeline.py  transformers.py
src/actuarial_loss_prediction/pipelines/model_prediction/: __init__.py  nodes.py  pipeline.py
src/actuarial_loss_prediction/pipelines/model_training/: nodes.py  pipeline.py
tests/pipelines/feature_engineering/: test_pipeline.py
tests/pipelines/model_prediction/: test_pipeline.py
tests/pipelines/model_training/: test_pipeline.py
