[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "actuarial_loss_prediction"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "cloudpickle>=3.1.2",
    "kedro>=1.4.0",
    "kedro-datasets>=9.3.0",
    "kedro-viz>=12.3.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "nltk>=3.9.4",
    "numpy>=2.2.6",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "pip>=26.1.1",
    "plotly>=6.7.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.5.1",
]

[project.scripts]
"actuarial-loss-prediction" = "actuarial_loss_prediction.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest-cov>=3,<7",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.12.0"
]

[tool.setuptools.dynamic]
version = {attr = "actuarial_loss_prediction.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "actuarial_loss_prediction"
project_name = "Actuarial-Loss-Prediction"
kedro_init_version = "1.4.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/actuarial_loss_prediction -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 30

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff]
line-length = 88
show-fixes = true
extend-exclude = ["notebooks/*", "tests/*.py"]

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
    "D",
]
ignore = ["E501", "PLR0913"]  # Ruff format takes care of line-too-long



[tool.kedro_telemetry]
project_id = "52c0e543b80b4aee8d30978b11686ee0"

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
